--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  margin-left: 60px;
+}
+
+.delete {
+  margin-left: 10px;
 }
 
 .App-logo {
@@ -26,6 +31,11 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.todo-list {
+  /* list-style: none; */
+  margin-left: 0;
 }
 
 @keyframes App-logo-spin {
